# PARP_project

./: .gitignore  act1.pl  act2.pl  act3.pl  adventure.pl  readme.md
Haskell/: act1.hs  adventure.cabal  hie.yaml  main.hs
Haskell/src/: Act1.hs  Act2.hs  Act3.hs  Main.hs  Utils.hs
Prolog/: act1.pl  adventure.pl
Prolog/plot/: act1.md  act3.md
Smalltalk/: Act1.st  Act2.st  Act3.st  GameUtils.st  Main.st  StartGame.st  act1.st  act2.st  act3.st  base_game.st  entity.st  game_summary_st.txt  loader.st  main.st  main_game.st
plot/: 0-introduction.md  act1.md  act2.md  act3.md
